--- a/Image Analysis Practice.ipynb
+++ b/Image Analysis Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "5579bf55-bf9c-47fe-953f-7ab9f88a80ce",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "from skimage import io, measure\n",
     "from skimage.color import rgb2gray\n",
-    "from skimage.filters import threshold_yen"
+    "from skimage.filters import threshold_yen\n",
+    "import glob, os"
    ]
   },
   {
@@ -281,8 +282,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9aa4d10f-e0b9-447a-bc57-cb61608697d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_images = glob.glob(os.path.join('Challenge01_Images', '*.jpg'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "93330f7f-30d2-4115-9599-d3c18544ab94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.49 ms ± 91.8 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "img_ori = plt.imread(path_to_images[-1])\n",
+    "img_new = img_ori.copy()\n",
+    "img_new = img_new.astype(np.float64)\n",
+    "\n",
+    "# plt.imshow(img_new, cmap='gray')\n",
+    "# plt.axis('off')\n",
+    "# plt.show()\n",
+    "\n",
+    "for layer in img_new:\n",
+    "    mask = layer > 50\n",
+    "    mask = mask.astype(np.float64)\n",
+    "    mask[mask == 1] = 1.5\n",
+    "    mask[mask == 0] = 1\n",
+    "    layer*=mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "941f2e82-f4cc-4172-b70c-3411a63192f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "229 ms ± 8.29 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "img_ori = plt.imread(path_to_images[-1])\n",
+    "img_new = img_ori.copy()\n",
+    "\n",
+    "for i in img_new:\n",
+    "    for j in i:\n",
+    "        if j > 50:\n",
+    "            j*=1.5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ac4c9b8e-1044-413d-92f8-00ff8d012ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69.6048632218845"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "229/3.29"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e488f228-8ef2-4dc1-aa73-2f379cca6bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "948 μs ± 3.09 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "img_ori = plt.imread(path_to_images[-1])\n",
+    "img_new = img_ori.copy()\n",
+    "img_new = img_new.astype(np.float64)\n",
+    "mask = img_new > 50\n",
+    "img_new[mask]*=1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c48ab346-6e41-4dff-897d-b21210c0330e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -304,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
